# linux_ipc_learning

./: CMakeLists.txt  main.c  readme.md
include/: lsafe.h  mmp.h  mutex_test.h  mypipe.h  mypos_msg.h  myvmsg.h  rpc_test.h  sem.h  summ.h
rpc/: client  client.c  server  server.c
src/: lsafe.c  mmp.c  mutex_test.c  mypipe.c  mypos_msg.c  myvmsg.c  rpc_test.c  sem.c  summ.c
